# AzureDusk_Test

./: CMakeLists.txt  README.md  main.cpp
include/: DeviceManager.h  MainWindow.h  MainWindow.ui  ui_MainWindow.h
src/: DeviceManager.cpp  MainWindow.cpp  main.cpp
ui/: MainWindow.ui
